welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:14: error: not found: value getMondeHauter
	for (i <- 0 to getMondeHauter - 1) {
                       ^